# mipt-security

./: .gitignore  readme.md
contest0/: CMakeLists.txt
contest0/src/: DSS.md  antideb.cpp  corovavirus.md  crack.cpp  estimated.py  find_host.md  keygen.cpp  lotr.md  object.cpp  tablet.cpp  vendor.cpp
